[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/TitleScreen/CapcomLogo.png" type="Texture" id=3]
[ext_resource path="res://scenes/TitleScreen/Background.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CapcomLogo" type="Sprite" parent="Tween"]
visible = false
position = Vector2( 733, 510 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tween"]
margin_left = 113.0
margin_top = 175.0
margin_right = 1382.0
margin_bottom = 618.0
theme = SubResource( 1 )
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
text = "Text"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="BackgroundImage" type="TextureRect" parent="ParallaxBackground"]
visible = false
margin_right = 1480.0
margin_bottom = 720.0
texture = ExtResource( 4 )
expand = true
